infra/k8s/meditation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meditation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meditation
  template:
    metadata:
      labels:
        app: meditation
    spec:
      containers:
        - name: meditation
          image: us.gcr.io/meditation-323509/meditation
---
apiVersion: v1
kind: Service
metadata:
  name: meditation-srv
spec:
  selector:
    app: meditation
  ports:
    - name: meditation
      protocol: TCP
      port: 5000
      targetPort: 5000
