infra/k8s/meditation-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meditation-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meditation-mongo
  template:
    metadata:
      labels:
        app: meditation-mongo
    spec:
      containers:
        - name: meditation-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: meditation-mongo-srv
spec:
  selector:
    app: meditation-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
