infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
        - host: meditation.dev
          http:
            paths:
                - path: /api/auth/?(.*)
                  backend:
                    serviceName: auth-srv
                    servicePort: 5000
